[add scrollbar]added scrollbar to prevent jumping page bug when there is nothing to scroll to

--- a/myCss.css
+++ b/myCss.css
@@ -1,10 +1,14 @@
 html, body { /* koko sivu mustaksi*/
     margin: 0;
     height: 100%;
+    
+}
+html{
+    overflow-y: scroll;
 }
 
 .kokosivu { /*div kokosivu*/
-    background-color: rgb(14, 14, 14);
+    background-color: rgb(0, 0, 0);;
     width: 100%;
     height: 100%;
 }
